--- a/Adribot/Adribot.csproj
+++ b/Adribot/Adribot.csproj
@@ -11,9 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="3.2.3" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="3.2.3" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="3.2.3" />
+    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00719" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00719" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00719" />
   </ItemGroup>
 
 </Project>
