--- a/Adribot/Adribot.csproj
+++ b/Adribot/Adribot.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -11,9 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00719" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00719" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00719" />
+    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00741" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00741" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00741" />
+    <PackageReference Include="JetBrains.Annotations" Version="2020.2.0-eap" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
 </Project>
