--- a/Adribot/Adribot.csproj
+++ b/Adribot/Adribot.csproj
@@ -2,20 +2,26 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="bin\Debug\netcoreapp3.1\api.json" />
-    <Content Include="bin\Debug\netcoreapp3.1\config.json" />
+    <Content Include="bin\Debug\net5.0\api.json" />
+    <Content Include="bin\Debug\net5.0\config.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00741" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00741" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00741" />
-    <PackageReference Include="JetBrains.Annotations" Version="2020.2.0-eap" />
+    <PackageReference Include="DSharpPlus" Version="4.1.0-nightly-00917" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.1.0-nightly-00917" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0-nightly-00917" />
+    <PackageReference Include="JetBrains.Annotations" Version="2021.2.0-eap3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="bin\Debug\netcoreapp3.1\" />
+    <Folder Include="src\helpers\attributes\" />
   </ItemGroup>
 
 </Project>
