--- a/Adribot/Adribot.csproj
+++ b/Adribot/Adribot.csproj
@@ -11,11 +11,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.1.0-nightly-00917" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.1.0-nightly-00917" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0-nightly-00917" />
-    <PackageReference Include="JetBrains.Annotations" Version="2021.2.0-eap3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
+    <PackageReference Include="DSharpPlus" Version="4.1.0-nightly-00928" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.1.0-nightly-00928" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0-nightly-00928" />
+    <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
