--- a/Adribot/Adribot.csproj
+++ b/Adribot/Adribot.csproj
@@ -10,7 +10,13 @@
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01160" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01160" />
     <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01160" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-preview.6.22329.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0-preview.6.22324.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0-preview.6.22324.4" />
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
   </ItemGroup>
 
