--- a/Adribot/Adribot.csproj
+++ b/Adribot/Adribot.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-01581" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-01581" />
     <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-01581" />
+    <PackageReference Include="Ical.Net" Version="4.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -23,6 +24,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="19.2.29" />
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
   </ItemGroup>
 
