--- a/Adribot/.editorconfig
+++ b/Adribot/.editorconfig
@@ -112,7 +112,7 @@ dotnet_diagnostic.IDE0046.severity = warning
 [*.cs]
 
 # var preferences
-csharp_style_var_for_built_in_types = false:error
+csharp_style_var_for_built_in_types = true:error
 csharp_style_var_when_type_is_apparent = true:error
 csharp_style_var_elsewhere = false:error
 
@@ -166,7 +166,7 @@ csharp_space_after_cast = false
 csharp_space_after_keywords_in_control_flow_statements = true
 csharp_space_between_method_call_parameter_list_parentheses = false
 csharp_space_between_method_declaration_parameter_list_parentheses = false
-csharp_space_between_parentheses = false
+csharp_space_between_parentheses = true
 csharp_space_before_colon_in_inheritance_clause = true
 csharp_space_after_colon_in_inheritance_clause = true
 csharp_space_around_binary_operators = before_and_after
