--- a/Adribot/Adribot.csproj
+++ b/Adribot/Adribot.csproj
@@ -8,20 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-01581" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-01581" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-01581" />
-    <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-01581" />
+    <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-01861" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-01861" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-01861" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-01861" />
     <PackageReference Include="Ical.Net" Version="4.2.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
-      <PrivateAssets>all</PrivateAssets>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.13">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
