--- a/Adribot.App/Adribot.csproj
+++ b/Adribot.App/Adribot.csproj
@@ -8,22 +8,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-02209" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-02209" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-02209" />
-    <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-02209" />
+    <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-02236" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-02236" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-02236" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-02236" />
     <PackageReference Include="Ical.Net" Version="4.2.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.3.24172.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.3.24172.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.2">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.3.24172.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0-preview.3.24172.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0-preview.3.24172.9 " />
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
   </ItemGroup>
 
