--- a/Adribot.App/Adribot.csproj
+++ b/Adribot.App/Adribot.csproj
@@ -8,10 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-02301" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-02301" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-02301" />
-    <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-02301" />
+    <PackageReference Include="Discord.Net" Version="3.15.2" />
     <PackageReference Include="Ical.Net" Version="4.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.5.24306.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.5.24306.3">
