--- a/Adribot.App/Dockerfile
+++ b/Adribot.App/Dockerfile
@@ -1,8 +1,17 @@
 FROM mcr.microsoft.com/dotnet/nightly/sdk:9.0-preview-noble AS build
 
+ARG DB_CONNECTION_FILE
+
+ENV DB_CONNECTION=${DB_CONNECTION_FILE}
+
 WORKDIR /home/ubuntu/app
 
 COPY Migrations/ src/ temp/ Adribot.csproj Program.cs /home/ubuntu/app/
+
+RUN dotnet tool install --global dotnet-ef --version 9.0.0-preview.6.24327.4
+
+# Apparently dotnet installation doesn't do this by default, surprisingly
+ENV PATH="$PATH:/root/.dotnet/tools"
 
 RUN dotnet restore
 RUN dotnet ef database update
