--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ services:
     secrets:
       - db_password
     healthcheck:
-      test: ["/bin/sh", "sqlcmd -S localhost -U SA -P $(cat /run/secrets/db_password) -Q 'SELECT 1'"]
+      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U SA -P $(cat /run/secrets/db_password) -Q 'SELECT 1' -C"]
       interval: 10s
       timeout: 5s
-      retries: 5
-      start_period: 30s
+      retries: 10
+      start_period: 20s
 
   bot:
     image: adribot_backend
@@ -33,8 +33,6 @@ services:
     build:
       context: ./Adribot.App
       dockerfile: Dockerfile
-      args:
-        DB_CONNECTION: /run/secrets/db_connection
     secrets:
       - db_connection
       - cat_token
