--- a/Adribot.App/Dockerfile
+++ b/Adribot.App/Dockerfile
@@ -1,16 +1,16 @@
-FROM mcr.microsoft.com/dotnet/nightly/sdk:9.0-preview-noble AS build
+FROM mcr.microsoft.com/dotnet/nightly/sdk:9.0-alpine-amd64 AS build
 
-WORKDIR /home/ubuntu/app
+WORKDIR /home/adri/adribot
 
-COPY Migrations/ src/ temp/ Adribot.csproj Program.cs /home/ubuntu/app/
+COPY Migrations/ src/ temp/ Adribot.csproj Program.cs ./
 
 RUN dotnet restore
 RUN dotnet publish -c Release -o release
 
-FROM mcr.microsoft.com/dotnet/nightly/runtime:9.0-preview-noble
+FROM mcr.microsoft.com/dotnet/nightly/runtime:9.0-alpine-amd64
 
-WORKDIR /home/ubuntu/app
+WORKDIR /home/adri/adribot
 
-COPY --from=build /home/ubuntu/app/release .
+COPY --from=build /home/adri/adribot/release .
 
 ENTRYPOINT ["dotnet", "Adribot.dll"]
