alpine needs more libraries

--- a/Adribot.App/Adribot.csproj
+++ b/Adribot.App/Adribot.csproj
@@ -6,6 +6,7 @@
     <UserSecretsId>809dd9c9-143c-4891-8fb3-9582e4389363</UserSecretsId>
     <Nullable>annotations</Nullable>
     <LangVersion>preview</LangVersion>
+    <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
