--- a/Adribot.App/Dockerfile
+++ b/Adribot.App/Dockerfile
@@ -9,6 +9,8 @@ RUN dotnet publish -c Release -o release
 
 FROM mcr.microsoft.com/dotnet/nightly/runtime:9.0-alpine-amd64
 
+RUN apk add icu-libs
+
 WORKDIR /home/adri/adribot
 
 COPY --from=build /home/adri/adribot/release .
