generate migrations on the fly

--- a/Adribot.App/Dockerfile
+++ b/Adribot.App/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /home/adri/adribot
 
 COPY Migrations/ src/ temp/ Adribot.csproj Program.cs ./
 
+RUN dotnet new tool-manifest && dotnet tool install dotnet-ef
+RUN dotnet tool run dotnet-ef migrations add AdribotDbScaffold
 RUN dotnet restore
 RUN dotnet publish -c Release -o release
 
