--- a/Adribot.App/Adribot.csproj
+++ b/Adribot.App/Adribot.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.18.0-nightly.20250612.563" />
+    <PackageReference Include="Discord.Net.Core" Version="3.18.0-nightly.20250612.563" />
     <PackageReference Include="Discord.Net.Interactions" Version="3.18.0-nightly.20250612.563" />
     <PackageReference Include="Ical.Net" Version="4.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
