--- a/Adribot.App/Adribot.csproj
+++ b/Adribot.App/Adribot.csproj
@@ -14,21 +14,21 @@
     <PackageReference Include="Discord.Net.Core" Version="3.18.0-nightly.20250612.563"/>
     <PackageReference Include="Discord.Net.Interactions" Version="3.18.0-nightly.20250612.563"/>
     <PackageReference Include="Ical.Net" Version="4.3.1"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0-preview.5.25277.114"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0-preview.5.25277.114">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0-preview.5.25277.114"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0-preview.5.25277.114">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.5"/>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5"/>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5"/>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5"/>
-    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.5"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.0-preview.5.25277.114"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.5.25277.114"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0-preview.5.25277.114"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-preview.5.25277.114"/>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0-preview.5.25277.114"/>
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0"/>
   </ItemGroup>
 
