--- a/Adribot.App/Adribot.csproj
+++ b/Adribot.App/Adribot.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <UserSecretsId>809dd9c9-143c-4891-8fb3-9582e4389363</UserSecretsId>
     <Nullable>annotations</Nullable>
     <LangVersion>preview</LangVersion>
@@ -10,25 +10,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="3.18.0-nightly.20250728.601"/>
-    <PackageReference Include="Discord.Net.Core" Version="3.18.0-nightly.20250728.601"/>
-    <PackageReference Include="Discord.Net.Interactions" Version="3.18.0-nightly.20250728.601"/>
-    <PackageReference Include="Ical.Net" Version="5.0.0"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+    <PackageReference Include="Discord.Net" Version="3.18.0-nightly.20250814.611"/>
+    <PackageReference Include="Discord.Net.Core" Version="3.18.0-nightly.20250814.611"/>
+    <PackageReference Include="Discord.Net.Interactions" Version="3.18.0-nightly.20250814.611"/>
+    <PackageReference Include="Ical.Net" Version="5.1.0 "/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0-preview.7.25380.108"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0-preview.7.25380.108">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0-preview.7.25380.108"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0-preview.7.25380.108">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.7"/>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7"/>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.7"/>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7"/>
-    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.7"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.0-preview.7.25380.108"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.7.25380.108"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0-preview.7.25380.108"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-preview.7.25380.108"/>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0-preview.7.25380.108"/>
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0"/>
   </ItemGroup>
 
