creating my own container is just better

--- a/Adribot.App/Dockerfile
+++ b/Adribot.App/Dockerfile
@@ -1,20 +1,13 @@
-FROM mcr.microsoft.com/dotnet/nightly/sdk:10.0-preview-alpine-amd64 AS build
+FROM alpine:latest
 
 WORKDIR /home/adri/adribot
 
 COPY Migrations/ src/ temp/ Adribot.csproj Program.cs ./
 
-RUN dotnet new tool-manifest && dotnet tool install dotnet-ef
-RUN dotnet tool run dotnet-ef migrations add AdribotDbScaffold
+RUN apk add dotnet10-sdk 
 RUN dotnet restore
+RUN dotnet tool install dotnet-ef
+RUN dotnet tool run dotnet-ef migrations add AdribotDbScaffold
 RUN dotnet publish -c Release -o release
 
-FROM mcr.microsoft.com/dotnet/nightly/runtime:10.0-preview-alpine-amd64
-
-RUN apk add icu-libs
-
-WORKDIR /home/adri/adribot
-
-COPY --from=build /home/adri/adribot/release .
-
-ENTRYPOINT ["dotnet", "Adribot.dll"]
+ENTRYPOINT ["dotnet", "release/Adribot.dll"]
