--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -8,7 +8,11 @@ services:
     ports:
       - "1433:1433"
     healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U SA -P fEkINbt54Ny6TY4nvA4eF1EIb4PiwQ17 -Q 'SELECT 1' -C"]
+      test:
+        [
+          "CMD-SHELL",
+          "/opt/mssql-tools18/bin/sqlcmd -S localhost -U SA -P $MSSQL_SA_PASSWORD -Q 'SELECT 1' -C",
+        ]
       interval: 10s
       timeout: 5s
       retries: 10
