--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -1,6 +1,6 @@
 services:
   adribot_db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
+    image: mcr.microsoft.com/mssql/server:2025-latest
     container_name: adribot_db
     environment:
       MSSQL_SA_PASSWORD: ${db_password}
@@ -11,7 +11,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          "/opt/mssql-tools18/bin/sqlcmd -S localhost -U SA -P $MSSQL_SA_PASSWORD -Q 'SELECT 1' -C",
+          "/opt/mssql-tools18/bin/sqlcmd -S localhost -U SA -P $MSSQL_SA_PASSWORD -Q 'SELECT 1' -No",
         ]
       interval: 10s
       timeout: 5s
